--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@200;300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Poppins:wght@100;300;400;700&family=Raleway:wght@100;200;300;400;500;600;700&display=swap");
+* {
+    margin: 0;
+    padding: 0;
+    outline: none;
+    box-sizing: border-box;
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+    font-size: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* animation: initiate 1s 7s forwards; */
+}
+.logo {
+    margin: 0.5rem 0rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.logo .green {
+    height: 8vw;
+    width: 15vw;
+    background-color: #88ed25;
 }
 
-.App-link {
-  color: #61dafb;
+.logo .black {
+    margin-left: 0.2vw;
+    height: 8vw;
+    width: 8vw;
+    background-color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.head1 {
+    display: flex;
+    font-family: "Azeret Mono", monospace;
+    font-size: 4.6rem;
+    letter-spacing: 0.4rem;
+    font-weight: 400;
+}
+.head2 {
+    font-family: "Azeret Mono", monospace;
+    font-size: 1.5rem;
+    letter-spacing: 0.65rem;
+    font-weight: 500;
+}
+
+@keyframes initiate {
+    100% {
+        left: 0px;
+        top: 0px;
+        transform: translate(0, 0) scale(0.3);
+    }
 }
